# indexer

./: .gitignore  README.md  config.py  database.py  dev  dev.ps1  indexer.desktop  indexer.py  main.py  models.py  mypy.ini  parser.py  pyproject.toml  r-indexer.ps1  repo.py  utils.py  watch.py
gui/: gui.py  main_window.py  result_widget.py
