[project]
name = "indexer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
    "pyside6>=6.9.2",
    "pytesseract>=0.3.13",
    "sqlalchemy[mypy]==2.0.*",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
    "whoosh>=2.7.4",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "types-tqdm>=4.67.0.20250809",
]
